// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Does not render user info when loading is not completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-hidden="true"
        class="sc-dlfnbm iTRrSd"
      >
        <h3
          class="sc-gsTCUz hmKoqn"
        >
          GitHub user found.
        </h3>
        <div
          class="sc-hKgILt oomuw"
        >
          <img
            alt="Avatar of Tejas Kumar"
            class="sc-eCssSg bhbAo"
            src="https://avatars1.githubusercontent.com/u/9947422?v=4"
          />
          <h3
            class="sc-jSgupP bLJygP"
          >
            Tejas Kumar
          </h3>
        </div>
        <p
          class="sc-gKsewC hnFWpo"
        >
          I write code and love life.
        </p>
        <h3
          class="sc-bdfBwQ sc-iBPRYJ fVVSDW guCgMS"
        >
          Top repositories
        </h3>
        <ul
          class="sc-fubCfw eZIGwe"
        >
          <li>
            <a
              href="https://github.com/TejasQ/add-gitignore"
            >
              TejasQ/add-gitignore
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/anna-artemov.now.sh"
            >
              TejasQ/anna-artemov.now.sh
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/awesome-cli-apps"
            >
              TejasQ/awesome-cli-apps
            </a>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-hidden="true"
      class="sc-dlfnbm iTRrSd"
    >
      <h3
        class="sc-gsTCUz hmKoqn"
      >
        GitHub user found.
      </h3>
      <div
        class="sc-hKgILt oomuw"
      >
        <img
          alt="Avatar of Tejas Kumar"
          class="sc-eCssSg bhbAo"
          src="https://avatars1.githubusercontent.com/u/9947422?v=4"
        />
        <h3
          class="sc-jSgupP bLJygP"
        >
          Tejas Kumar
        </h3>
      </div>
      <p
        class="sc-gKsewC hnFWpo"
      >
        I write code and love life.
      </p>
      <h3
        class="sc-bdfBwQ sc-iBPRYJ fVVSDW guCgMS"
      >
        Top repositories
      </h3>
      <ul
        class="sc-fubCfw eZIGwe"
      >
        <li>
          <a
            href="https://github.com/TejasQ/add-gitignore"
          >
            TejasQ/add-gitignore
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/anna-artemov.now.sh"
          >
            TejasQ/anna-artemov.now.sh
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/awesome-cli-apps"
          >
            TejasQ/awesome-cli-apps
          </a>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Badge Renders user info properly when loading is completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-hidden="false"
        class="sc-dlfnbm gIdFjC"
      >
        <h3
          class="sc-gsTCUz hmKoqn"
        >
          GitHub user found.
        </h3>
        <div
          class="sc-hKgILt oomuw"
        >
          <img
            alt="Avatar of Tejas Kumar"
            class="sc-eCssSg bhbAo"
            src="https://avatars1.githubusercontent.com/u/9947422?v=4"
          />
          <h3
            class="sc-jSgupP bLJygP"
          >
            Tejas Kumar
          </h3>
        </div>
        <p
          class="sc-gKsewC hnFWpo"
        >
          I write code and love life.
        </p>
        <h3
          class="sc-bdfBwQ sc-iBPRYJ fVVSDW guCgMS"
        >
          Top repositories
        </h3>
        <ul
          class="sc-fubCfw eZIGwe"
        >
          <li>
            <a
              href="https://github.com/TejasQ/add-gitignore"
            >
              TejasQ/add-gitignore
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/anna-artemov.now.sh"
            >
              TejasQ/anna-artemov.now.sh
            </a>
          </li>
          <li>
            <a
              href="https://github.com/TejasQ/awesome-cli-apps"
            >
              TejasQ/awesome-cli-apps
            </a>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-hidden="false"
      class="sc-dlfnbm gIdFjC"
    >
      <h3
        class="sc-gsTCUz hmKoqn"
      >
        GitHub user found.
      </h3>
      <div
        class="sc-hKgILt oomuw"
      >
        <img
          alt="Avatar of Tejas Kumar"
          class="sc-eCssSg bhbAo"
          src="https://avatars1.githubusercontent.com/u/9947422?v=4"
        />
        <h3
          class="sc-jSgupP bLJygP"
        >
          Tejas Kumar
        </h3>
      </div>
      <p
        class="sc-gKsewC hnFWpo"
      >
        I write code and love life.
      </p>
      <h3
        class="sc-bdfBwQ sc-iBPRYJ fVVSDW guCgMS"
      >
        Top repositories
      </h3>
      <ul
        class="sc-fubCfw eZIGwe"
      >
        <li>
          <a
            href="https://github.com/TejasQ/add-gitignore"
          >
            TejasQ/add-gitignore
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/anna-artemov.now.sh"
          >
            TejasQ/anna-artemov.now.sh
          </a>
        </li>
        <li>
          <a
            href="https://github.com/TejasQ/awesome-cli-apps"
          >
            TejasQ/awesome-cli-apps
          </a>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
